# Epistasis_Calculator

./: CHANGES.txt  Conversion_three_mutations_results.xlsx  LICENSE  MANIFEST.in  README.md  Table_maker_cleared.py  Table_maker_cleared_v1.1.py  Table_maker_cleared_v1.2.py  app.py  development.ini  epistasis_script.py  production.ini  pyproject.toml  pytest.ini  setup.py
demo/: AcevedoRocha_p450_conversion.xlsx  AcevedoRocha_p450_selectivity.xlsx  Antibiotics_2006.xlsx  Meini_2015_Imipenem_KM.xlsx  Meini_2015_Pennicilin kcat.xlsx  Meini_2015_Temperature.xlsx  Temperatures.xlsx  Zhang_PAMO_selectivity_Gibbs.xlsx  demo.json  kCat_over_km.xlsx  kcat_over_KM_for_NADPH_by_FDH.xlsx
epiapp/: __init__.py  routes.py  tests-broken.py  tests.py
epiapp/temp/: readme.txt
epiapp/templates/: 404.mako  docs.mako  epistasis.js  epistasis.mako  format_func.js  google_analytics.mako  layout.mako  powersetplot.js
epiapp/views/: api.py  default.py  epi.py  other.py
epistasis/: __init__.py  epi_aux_mixin.py  epi_base_mixin.py  junk.py
epistasis/older files/: Table_maker_first_refactoring.py  Table_maker_original.py
