[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epiapp"
version = "0.0"
description = "epiapp"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "Matteo Ferla", email = "matteo.ferla@gmail.com"}, {name = "Paul Lubrano", email = ""}]
keywords = ["epistasis", "calculator"]
classifiers = [
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "plaster_pastedeploy",
    "pyramid",
    "pyramid_mako",
    "pyramid_debugtoolbar",
    "waitress",
    "pandas",
]

[project.optional-dependencies]
testing = [
    "WebTest >= 1.3.1",
    "pytest >= 3.7.4",
    "pytest-cov",
]

[project.urls]
Homepage = "epistasis.matteoferla.com"

[tool.setuptools]
packages = ["epiapp"]  # Or use `find` if you have multiple subpackages

[tool.setuptools.packages.find]
where = ["."]
include = ["epiapp*"]

[project.entry-points."paste.app_factory"]
main = "epiapp:main"
